# riffoser

./: .gitignore  BUGS  Makefile.in  README  README.md  TODO  configure  configure.ac  debugstuff.h  instrument.c  libriffoser.c  mp3.c  ogg.c  riffoser.c  riffoser.h  riffoser_r.h  track.c  wav.c  wave.c  wavefuncs.h
examples/: example1.c  example2.c  example3.c  example4.c  example5.c  example6.c  example7.c  example8.c  example9.c
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
tests/: instrument1.c  mp3_readwrite.c  ogg_readwrite.c  singlewaves.c  stereowaves.c  wav_readwrite.c  wav_readwrite_mono.c  wav_readwrite_stereo.c  wavewarping.c
